fix: css 수정(text-overflow, pointer, 배치)

--- a/src/css/MyComment.css
+++ b/src/css/MyComment.css
@@ -1,13 +1,19 @@
+.MyCommentWrapper {
+    width: 100%;
+}
+
 .Comment {
     margin: 30px;
     font-size: xx-large;
 }
 
 .MyComment {
-    margin-left: 30px;
-    margin-right: 40px;
+    width: 96%;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
 
 .MyProfile {
@@ -18,13 +24,12 @@
 }
 
 .Input {
-    width: 85%;
+    width: 90%;
     vertical-align: top;
     border-top: none;
     border-left: none;
     border-right: none;
     border-bottom: 1px solid #000000;
-    margin-left: 20px;
     padding: 5px;
     font-size: medium;
     resize: none;
@@ -37,7 +42,7 @@
     color: #ffffff;
     background-color: mediumpurple;
     font-size: medium;
-    margin-left: 23px;
     border: none;
     border-radius: 0.5rem;
+    cursor: pointer;
 }
